--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "S.P.S TA",
-  "short_name": "S.P.S TA",
+  "name": "Wisdom TA",
+  "short_name": "Wisdom TA",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
